fresh_java_errors.txt
> Task :app:checkKotlinGradlePluginConfigurationErrors
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:kaptGenerateStubsDebugKotlin UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE

> Task :app:kaptDebugKotlin FAILED
warning: Kapt support in Moshi Kotlin Code Gen is deprecated and will be removed in 2.0. Please migrate to KSP. https://github.com/square/moshi#codegen
.\gradlew.bat : D:\Project\
nfgplus\app\src\main\java\c
om\theflexproject\thunder\f
ragments\PlayerFragment.jav
a:97: error: cannot find 
symbol
At line:1 char:1
+ .\gradlew.bat :app:compil
eDebugJavaWithJavac 2>&1 | 
Out-File -FilePat ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo         
     : NotSpeci    fied: 
(D:\Project    \nfgp...not 
find     symbol:String) [] 
   , RemoteException
    + FullyQualifiedE    
rrorId : NativeCo    
mmandError
 
public class 
PlayerFragment extends 
BaseFragment
                           
         ^
  symbol: class 
BaseFragment
warning: The following options were not recognized by any processor: '[dagger.fastInit, dagger.hilt.android.internal.disableAndroidSuperclassValidation, dagger.hilt.android.internal.projectType, dagger.hilt.internal.useAggregatingRootProcessor, room.schemaLocation, kapt.kotlin.generated]'

[Incubating] Problems report is available at: file:///D:/Project/nfgplus/build/reports/problems/problems-report.html

FAILURE: Build failed with 
an exception.

* What went wrong:
Execution failed for task 
':app:kaptDebugKotlin'.
> A failure occurred while 
executing org.jetbrains.kot
lin.gradle.internal.KaptWit
houtKotlincTask$KaptExecuti
onWorkAction

* Try:
> Run with --stacktrace 
option to get the stack 
trace.
> Run with --info or 
--debug option to get more 
log output.
> Run with --scan to get 
full insights.
> Get more help at 
https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.13/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
21 actionable tasks: 2 executed, 19 up-to-date
